<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iakovos.washingmachine.Activity5"
    android:background="@drawable/bubble1">

    <ProgressBar
        android:id="@+id/progressBar3"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="713dp"
        android:layout_height="54dp"
        android:layout_marginBottom="378dp"
        android:layout_marginEnd="232dp"
        android:layout_marginRight="232dp"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="30dp"
        android:max="100"
        android:progress="56"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:progressDrawable="@drawable/custom_progress"/>

    <Button
        android:id="@+id/button10"
        android:layout_width="268dp"
        android:layout_height="63dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="327dp"
        android:layout_marginRight="327dp"
        android:layout_marginStart="367dp"
        android:layout_marginLeft="367dp"
        android:layout_marginTop="26dp"
        android:text="@string/predetermined_temperature_and_spins"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar3"
        android:background="@drawable/border_of_button"/>

    <Button
        android:id="@+id/button11"
        android:layout_width="268dp"
        android:layout_height="63dp"
        android:layout_marginBottom="214dp"
        android:layout_marginEnd="327dp"
        android:layout_marginRight="327dp"
        android:layout_marginStart="367dp"
        android:layout_marginLeft="367dp"
        android:layout_marginTop="44dp"
        android:text="@string/advanced_settings"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10"
        android:background="@drawable/border_of_button"/>

    <Button
        android:id="@+id/button12"
        android:layout_width="268dp"
        android:layout_height="63dp"
        android:layout_marginBottom="82dp"
        android:layout_marginEnd="327dp"
        android:layout_marginRight="327dp"
        android:layout_marginStart="367dp"
        android:layout_marginLeft="367dp"
        android:text="@string/my_programs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/border_of_button"/>

    <Button
        android:id="@+id/button13"
        android:layout_width="127dp"
        android:layout_height="58dp"
        android:layout_marginBottom="39dp"
        android:layout_marginStart="834dp"
        android:layout_marginLeft="834dp"
        android:text="@string/reset_options"
        app:layout_constraintBottom_toTopOf="@+id/progressBar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/border_of_button"/>

    <Button
        android:id="@+id/button14"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="707dp"
        android:layout_marginRight="707dp"
        android:layout_marginTop="330dp"
        android:text="@string/back2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar3"
        android:background="@drawable/border_of_button"/>

    <View
        android:id="@+id/view3"
        android:layout_width="2dp"
        android:layout_height="54dp"
        android:layout_marginEnd="628dp"
        android:layout_marginRight="628dp"
        android:layout_marginTop="97dp"
        android:background="#000000"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view4"
        android:layout_width="2dp"
        android:layout_height="54dp"
        android:layout_marginEnd="524dp"
        android:layout_marginRight="524dp"
        android:layout_marginTop="97dp"
        android:background="#000000"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view2"
        android:layout_width="2dp"
        android:layout_height="54dp"
        android:layout_marginEnd="728dp"
        android:layout_marginRight="728dp"
        android:layout_marginTop="97dp"
        android:background="#000000"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="364dp"
        android:layout_height="65dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="163dp"
        android:layout_marginRight="163dp"
        android:layout_marginLeft="308dp"
        android:layout_marginStart="308dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/step_4_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="26sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/progressBar3"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/step_1"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/progressBar3"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/step_2"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/step_3"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toStartOf="@+id/view4"
        app:layout_constraintStart_toEndOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="328dp"
        android:layout_marginRight="328dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/step_4"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar3"
        app:layout_constraintEnd_toEndOf="@+id/progressBar3"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="64dp"
        android:layout_height="55dp"
        android:layout_marginBottom="423dp"
        android:layout_marginEnd="898dp"
        android:layout_marginRight="898dp"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help"
        android:background="@drawable/border_of_button"
        android:visibility="visible" android:contentDescription="@string/help" />


</android.support.constraint.ConstraintLayout>
