<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubble1"
    tools:context="com.example.iakovos.washingmachine.Activity3">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="713dp"
        android:layout_height="54dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="113dp"
        android:layout_marginRight="113dp"
        android:layout_marginLeft="136dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="24dp"
        android:max="100"
        android:progress="28"
        android:progressDrawable="@drawable/custom_progress"
        app:layout_constraintBottom_toTopOf="@+id/textView32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="508dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="221dp"
        android:layout_marginStart="221dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/choose_the_color_of_program"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="26sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2"
        app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/backButton2"
        android:layout_width="255dp"
        android:layout_height="53dp"
        android:layout_marginEnd="707dp"
        android:layout_marginRight="707dp"
        android:layout_marginTop="87dp"
        android:background="@drawable/border_of_button"
        android:text="@string/back2"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <Button
        android:id="@+id/button"
        android:layout_width="154dp"
        android:layout_height="64dp"
        android:layout_marginBottom="130dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="149dp"
        android:layout_marginStart="149dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/blackbutton"
        android:text="@string/black_clothes"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/backButton2"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="154dp"
        android:layout_height="64dp"
        android:layout_marginBottom="184dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/border_of_button"
        android:text="@string/white_clothes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="154dp"
        android:layout_height="64dp"
        android:layout_marginBottom="184dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/colourbutton"
        android:text="@string/colorful_clothes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/view"
        android:layout_width="2dp"
        android:layout_height="54dp"
        android:layout_marginEnd="720dp"
        android:layout_marginTop="97dp"
        android:background="#000000"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="64dp"
        android:layout_height="20dp"
        android:layout_marginBottom="393dp"
        android:layout_marginEnd="478dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="115dp"
        android:text="@string/step_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/progressBar2"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="64dp"
        android:layout_height="55dp"
        android:layout_marginBottom="423dp"
        android:layout_marginEnd="898dp"
        android:layout_marginRight="898dp"
        app:layout_constraintBottom_toTopOf="@+id/backButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help"
        android:background="@drawable/border_of_button"
        android:visibility="visible" android:contentDescription="@string/help" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="327dp"
        android:layout_height="57dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="317dp"
        android:layout_marginRight="317dp"
        android:layout_marginLeft="254dp"
        android:layout_marginStart="254dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/step_2_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="64dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="11dp"
        android:text="@string/step_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />


</android.support.constraint.ConstraintLayout>
