<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iakovos.washingmachine.Activity2"
    android:background="@drawable/bubble1">

    <ProgressBar
        android:id="@+id/progressBar1"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="713dp"
        android:layout_height="54dp"
        android:layout_marginBottom="378dp"
        android:layout_marginEnd="232dp"
        android:layout_marginLeft="233dp"
        android:layout_marginRight="132dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="30dp"
        android:max="100"
        android:progress="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:progressDrawable="@drawable/custom_progress"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="508dp"
        android:layout_height="168dp"
        android:layout_marginBottom="151dp"
        android:layout_marginEnd="221dp"
        android:layout_marginLeft="233dp"
        android:layout_marginRight="221dp"
        android:layout_marginStart="233dp"
        android:layout_marginTop="59dp"
        android:text="@string/insert_clothes_in_the_washing_machine_and_place_the_detergent_on_the_specially_formed_recess"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="26sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar1"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="157dp"
        android:layout_height="66dp"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="402dp"
        android:layout_marginRight="402dp"
        android:layout_marginLeft="403dp"
        android:layout_marginStart="403dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/border_of_button"
        android:text="@string/ok"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="255dp"
        android:layout_height="53dp"
        android:layout_marginEnd="707dp"
        android:layout_marginRight="707dp"
        android:layout_marginTop="330dp"
        android:background="@drawable/border_of_button"
        android:text="@string/back2"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:layout_marginBottom="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/step_1"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="64dp"
        android:layout_height="55dp"
        android:layout_marginBottom="423dp"
        android:layout_marginEnd="898dp"
        android:layout_marginRight="898dp"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help"
        android:background="@drawable/border_of_button"
        android:visibility="visible" android:contentDescription="@string/help" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="327dp"
        android:layout_height="57dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="317dp"
        android:layout_marginRight="317dp"
        android:layout_marginLeft="254dp"
        android:layout_marginStart="254dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/step_1_put_clothes_and_detergent"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/progressBar1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
